Rebase on monerujo 1x5x10 (#10)
* spinner tweaks (#306)

* Fix keystore null (#308)

* avoid crash if input to large

* avoid NPE if wallet key not found

* Use FingerprintManager instead of FingerprintManagerCompat (Fix #300) (#302)

* show correct amount for pending tx (#309)

* accounts (#312)

* Inform user the progress or result of opening wallet (#297)

* Fix balance (#313)

* fix length test (#314)

* sweep all (#317)

* French Strings updated to #297 (#316)

+ Missing update to #312

+ enhancement on "wrapping things up"

* Fixes to v1.5.5 (#318)

* fix disappearing hamburger

* german fixes to fit space

* Layout tweaks (#319)

* remove mixin settings (#320)

* subaddresses (#322)

* new subaddress bump effect (#327)

* Update Translations (#329)

* avoid NPE (#330)

* fix displayed subaddress #

* fix path of build script

* cleanup translations & resources

* include for aeon

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -80,8 +80,10 @@
     <string name="prompt_password">Contraseña para %1$s</string>
     <string name="prompt_fingerprint_auth">Puedes poner tu dedo en el sensor para autorizar con tu huella.</string>
     <string name="prompt_send_password">Confirmar Contraseña</string>
+    <string name="prompt_open_wallet">Abriendo el monedero&#8230;</string>
     <string name="bad_fingerprint">Huella no reconocida. Inténtalo nuevamente.</string>
     <string name="bad_password">¡Contraseña incorrecta!</string>
+    <string name="bad_saved_password">La contraseña guardada es incorrecta.\nIngresela manualmente.</string>
     <string name="bad_wallet">¡El monedero no existe!</string>
     <string name="prompt_daemon_missing">¡La dirección del daemon debe estar configurada!</string>
     <string name="prompt_wrong_net">El monedero no coincide con la red seleccionada</string>
@@ -168,8 +170,8 @@
     <string name="send_notes_hint">Notas Privadas (opcional)</string>
     <string name="send_generate_paymentid_hint">Generar</string>
     <string name="send_qr_hint">Scan</string>
-    <string name="send_qr_invalid">No es un Código QR de monero</string>
-    <string name="send_qr_address_invalid">Dirección de Monero inválida</string>
+    <string name="send_qr_invalid">No es un Código QR de Aeon</string>
+    <string name="send_qr_address_invalid">Dirección de Aeon inválida</string>
     <string name="send_title">Enviar</string>
     <string name="send_available">Fondos disponibles: %1$s AEON</string>
     <string name="send_address_title">Dirección</string>
@@ -218,8 +220,6 @@
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">AEON no es un número</string>
 
-    <string name="receive_title">Recibir</string>
-
     <string name="details_alert_message">Se va a mostrar información delicada.\n¡Mira por encima del hombro!</string>
     <string name="details_alert_yes">Estoy seguro</string>
     <string name="details_alert_no">¡Llévame de vuelta!</string>
@@ -241,10 +241,18 @@
     <string name="fab_restore_key">Restaurar monedero con claves privadas</string>
     <string name="fab_restore_seed">Restaurar monedero con semilla de 25 palabras</string>
     <string name="label_send_settings_advanced">Avanzado</string>
-    <string name="send_send_label">Enviar mis preciados moneroj</string>
+    <string name="send_send_label">Enviar mis preciados Aeon</string>
     <string name="send_address_invalid">No es una dirección válida</string>
     <string name="send_amount">%1$s AEON</string>
     <string name="send_fee">+%1$s Comisión</string>
     <string name="about_whoami">Soy monerujo</string>
     <string name="info_crazypass_enabled">CrAzYpass activado, toca para más info.</string>
+
+    <string name="accounts_drawer_new">Crear Cuenta</string>
+    <string name="accounts_new">Nueva cuenta agregada #%1$d</string>
+    <string name="tx_account"># de cuenta</string>
+
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 </resources>
