--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -83,8 +83,10 @@
     <string name="prompt_password">Passwort für %1$s</string>
     <string name="prompt_fingerprint_auth">Fingerabdruck-Authentifizierung möglich.\nBitte Sensor berühren.</string>
     <string name="prompt_send_password">Passwort bestätigen</string>
+    <string name="prompt_open_wallet">Wallet wird geöffnet &#8230;</string>
     <string name="bad_fingerprint">Fingerabdruck nicht erkannt. Nochmals versuchen.</string>
     <string name="bad_password">Falsches Passwort!</string>
+    <string name="bad_saved_password">Gespeichertes Passwort ist inkorrekt.\nBitte Passwort manuell eingeben.</string>
     <string name="bad_wallet">Wallet existiert nicht!</string>
     <string name="prompt_daemon_missing">Daemonadresse muss gesetzt sein!</string>
     <string name="prompt_wrong_net">Wallet entspricht nicht dem ausgewähltem Netz</string>
@@ -171,19 +173,19 @@
     <string name="send_notes_hint">Private Notizen (optional)</string>
     <string name="send_generate_paymentid_hint">Erzeuge</string>
     <string name="send_qr_hint">Scannen</string>
-    <string name="send_send_label">Gib meine wertvollen Moneroj aus</string>
+    <string name="send_send_label">Gib meine wertvollen Aeon aus</string>
     <string name="send_qr_invalid">Kein QR-Code</string>
     <string name="send_qr_address_invalid">Kein gültiger Zahlungs-QR-Code</string>
     <string name="send_address_invalid">Keine gültige Adresse</string>
     <string name="send_title">Senden</string>
     <string name="send_available">Saldo: %1$s AEON</string>
     <string name="send_address_title">Adresse</string>
-    <string name="send_amount_title">Menge</string>
-    <string name="send_settings_title">Einstellungen</string>
-    <string name="send_confirm_title">Bestätigen</string>
+    <string name="send_amount_title">Betrag</string>
+    <string name="send_settings_title">Optionen</string>
+    <string name="send_confirm_title">Gebühr</string>
     <string name="send_success_title">Fertig</string>
 
-    <string name="send_amount_label">Menge</string>
+    <string name="send_amount_label">Betrag</string>
     <string name="send_fee_label">Gebühr</string>
     <string name="send_total_label">Total</string>
 
@@ -204,7 +206,7 @@
     <string name="tx_destination">Ziel</string>
     <string name="tx_paymentId">Zahlungs-ID</string>
     <string name="tx_blockheight">Block</string>
-    <string name="tx_amount">Menge</string>
+    <string name="tx_amount">Betrag</string>
     <string name="tx_fee">Gebühr</string>
     <string name="tx_transfers">Transfers</string>
     <string name="tx_notes">Notizen</string>
@@ -217,7 +219,7 @@
     <string name="tx_failed">FEHLGESCHLAGEN</string>
 
     <string name="receive_paymentid_hint">Zahlungs-ID (optional)</string>
-    <string name="receive_amount_hint">Menge</string>
+    <string name="receive_amount_hint">Betrag</string>
     <string name="receive_cannot_open">Konnte Wallet nicht öffnen!</string>
     <string name="receive_paymentid_invalid">16 oder 64 Hex-Zeichen (0&#8211;9,a&#8211;f)</string>
     <string name="receive_integrated_paymentid_invalid">Muss bei einer integrierten Adresse leer sein</string>
@@ -225,8 +227,6 @@
     <string name="receive_amount_too_big">Max. %1$s</string>
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">AEON keine Nummer</string>
-
-    <string name="receive_title">Empfangen</string>
 
     <string name="details_alert_message">Sensible Daten werden angezeigt.\nSchau über deine Schulter!</string>
     <string name="details_alert_yes">Ich bin sicher</string>
@@ -248,4 +248,12 @@
     <string name="fab_restore_viewonly">View Only Wallet wiederherstellen</string>
     <string name="fab_restore_key">Wallet mit privaten Schlüsseln wiederherstellen</string>
     <string name="fab_restore_seed">Wallet mit 25 Wörter Seed wiederherstellen</string>
+
+    <string name="accounts_drawer_new">Konto erstellen</string>
+    <string name="accounts_new">Neues Konto #%1$d hinzugefügt</string>
+    <string name="tx_account">Konto #</string>
+
+    <string name="send_sweepall">Versende alle verfügbaren Gelder aus diesem Konto!</string>
+    <string name="tx_subaddress">Subadresse #%1$d</string>
+    <string name="generate_address_label_sub">Öffentliche Subadresse #%1$d</string>
 </resources>
