--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,7 +51,7 @@
     <string name="open_progress">Vérification de la connexion au démon</string>
     <string name="changepw_progress">Modification du mot de passe en cours</string>
 
-    <string name="service_progress">Récapitulation &#8230;\nCela peut prendre un moment !</string>
+    <string name="service_progress">Remise en ordre &#8230;\nCela peut prendre un moment !</string>
 
     <string name="backup_failed">Sauvegarde Échouée !</string>
     <string name="archive_failed">Archivage Échouée !</string>
@@ -83,8 +83,10 @@
     <string name="prompt_password">Mot de passe pour %1$s</string>
     <string name="prompt_fingerprint_auth">Vous pouvez également ouvrir le portefeuille avec votre empreinte digitale.\nMerci de toucher le capteur.</string>
     <string name="prompt_send_password">Confirmez le mot de passe</string>
+    <string name="prompt_open_wallet">Ouverture du portefeuille &#8230;</string>
     <string name="bad_fingerprint">Empreinte digitale non reconnue. Résessayez.</string>
     <string name="bad_password">Mot de passe incorrect !</string>
+    <string name="bad_saved_password">Mot de passe sauvegardé incorrect.\nVeuillez entrer le mot de passe manuellement.</string>
     <string name="bad_wallet">Portefeuille inexistant !</string>
     <string name="prompt_daemon_missing">L\'adresse du démon ne peut pas être configurée !</string>
     <string name="prompt_wrong_net">Portefeuille incompatible avec le réseau sélectionné</string>
@@ -173,7 +175,7 @@
     <string name="send_notes_hint">Notes Privées (optionnelles)</string>
     <string name="send_generate_paymentid_hint">Générer</string>
     <string name="send_qr_hint">Scanner</string>
-    <string name="send_send_label">Dépenser mes beaux Moneroj</string>
+    <string name="send_send_label">Dépenser mes beaux Aeon</string>
     <string name="send_qr_invalid">QR Code invalide</string>
     <string name="send_qr_address_invalid">QR code de paiement invalide</string>
     <string name="send_address_invalid">Adresse invalide</string>
@@ -228,8 +230,6 @@
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">AEON pas un nombre</string>
 
-    <string name="receive_title">Recevoir</string>
-
     <string name="details_alert_message">Des données sensible vont être affichées.\nRegardez autour de vous !</string>
     <string name="details_alert_yes">C\'est bon</string>
     <string name="details_alert_no">Non merci !</string>
@@ -250,4 +250,12 @@
     <string name="fab_restore_viewonly">Restaurer un portefeuille d\'audit</string>
     <string name="fab_restore_key">Restaurer un portefeuille depuis la clef privée</string>
     <string name="fab_restore_seed">Restaurer un portefeuille depuis la phrase mnémonique</string>
+
+    <string name="accounts_drawer_new">Créer un Compte</string>
+    <string name="accounts_new">Nouveau Compte #%1$d ajouté</string>
+    <string name="tx_account">Compte #</string>
+
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 </resources>
