--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -82,8 +82,10 @@
     <string name="prompt_password">Passord for %1$s</string>
     <string name="prompt_fingerprint_auth">[You can also open wallet using fingerprint.\nPlease touch sensor.]</string>
     <string name="prompt_send_password">Bekreft passord</string>
+    <string name="prompt_open_wallet">[Opening the wallet&#8230;]</string>
     <string name="bad_fingerprint">[Fingerprint not recognized. Try again.]</string>
     <string name="bad_password">Feil passord!</string>
+    <string name="bad_saved_password">[Saved password is incorrect.\nPlease enter password manually.]</string>
     <string name="bad_wallet">Lommebok eksisterer ikke!</string>
     <string name="prompt_daemon_missing">Daemon-adresse må være gitt!</string>
     <string name="prompt_wrong_net">Lommebok matcher ikke valgt nett</string>
@@ -171,7 +173,7 @@
     <string name="send_notes_hint">Privat notat (valgfritt)</string>
     <string name="send_generate_paymentid_hint">Generer</string>
     <string name="send_qr_hint">Skann</string>
-    <string name="send_send_label">Bruk mine søte moneroj</string>
+    <string name="send_send_label">Bruk mine søte Aeon</string>
     <string name="send_qr_invalid">Ikke en QR-kode</string>
     <string name="send_qr_address_invalid">Ikke en gyldig betalings-QR-kode</string>
     <string name="send_address_invalid">Ikke en gyldig adresse</string>
@@ -226,8 +228,6 @@
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">AEON ikke et tall</string>
 
-    <string name="receive_title">Motta</string>
-
     <string name="details_alert_message">Sensitive data vil nå bli vist.\nSe over skulderen din!</string>
     <string name="details_alert_yes">Jeg er trygg</string>
     <string name="details_alert_no">Ta meg tilbake!</string>
@@ -248,4 +248,12 @@
     <string name="fab_restore_viewonly">Gjenoprett bare-se lommebok</string>
     <string name="fab_restore_key">Gjenoprett lommebok fra private nøkler</string>
     <string name="fab_restore_seed">Gjenoprett lommebok fra 25-ord seed</string>
+
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
+
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 </resources>
