--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -82,8 +82,10 @@
     <string name="prompt_password">%1$s 的密码</string>
     <string name="prompt_fingerprint_auth">你也可以使用指纹来开启钱包。\n请轻触你的指纹感应器。</string>
     <string name="prompt_send_password">确认密码</string>
+    <string name="prompt_open_wallet">[Opening the wallet&#8230;]</string>
     <string name="bad_fingerprint">无法识别指纹，请再试一次。</string>
     <string name="bad_password">密码错误!</string>
+    <string name="bad_saved_password">[Saved password is incorrect.\nPlease enter password manually.]</string>
     <string name="bad_wallet">钱包不存在!</string>
     <string name="prompt_daemon_missing">必需要设定节点位置!</string>
     <string name="prompt_wrong_net">钱包不符合选择的网络</string>
@@ -168,7 +170,7 @@
     <string name="send_notes_hint">注记 (选填)</string>
     <string name="send_generate_paymentid_hint">产生</string>
     <string name="send_qr_hint">扫描</string>
-    <string name="send_send_label">发送我的 Moneroj</string>
+    <string name="send_send_label">发送我的 Aeon</string>
     <string name="send_qr_invalid">这不是QR码</string>
     <string name="send_qr_address_invalid">这不是有效的付款QR码</string>
     <string name="send_address_invalid">这不是有效的地址</string>
@@ -223,8 +225,6 @@
     <string name="receive_amount_negative">最小值 0</string>
     <string name="receive_amount_nan">输入的AEON不是个数字</string>
 
-    <string name="receive_title">接收</string>
-
     <string name="details_alert_message">将会选示敏感信息。\n请注意周遭安全!</string>
     <string name="details_alert_yes">我现在很安全</string>
     <string name="details_alert_no">不看了!</string>
@@ -245,4 +245,12 @@
     <string name="fab_restore_viewonly">恢复只读钱包</string>
     <string name="fab_restore_key">从私钥恢复钱包</string>
     <string name="fab_restore_seed">从25字种子码恢复钱包</string>
+
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
+
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 </resources>
