--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -83,8 +83,10 @@
     <string name="prompt_password">%1$s 的密碼</string>
     <string name="prompt_fingerprint_auth">你也可以使用指紋來開啟錢包。\n請輕觸你的指紋感應器。</string>
     <string name="prompt_send_password">確認密碼</string>
+    <string name="prompt_open_wallet">正在開啟錢包&#8230;</string>
     <string name="bad_fingerprint">無法辨識的指紋，請再試一次。</string>
     <string name="bad_password">密碼錯誤!</string>
+    <string name="bad_saved_password">儲存的密碼不正確。\n請手動輸入密碼。</string>
     <string name="bad_wallet">錢包不存在!</string>
     <string name="prompt_daemon_missing">必需要設定節點位置!</string>
     <string name="prompt_wrong_net">錢包不符合選擇的網路</string>
@@ -169,7 +171,7 @@
     <string name="send_notes_hint">註記 (選填)</string>
     <string name="send_generate_paymentid_hint">產生</string>
     <string name="send_qr_hint">掃描</string>
-    <string name="send_send_label">發送我的 Moneroj</string>
+    <string name="send_send_label">發送我的 Aeon</string>
     <string name="send_qr_invalid">這不是QR碼</string>
     <string name="send_qr_address_invalid">這不是有效的付款QR碼</string>
     <string name="send_address_invalid">這不是有效的地址</string>
@@ -224,8 +226,6 @@
     <string name="receive_amount_negative">最小值 0</string>
     <string name="receive_amount_nan">輸入的AEON不是個數字</string>
 
-    <string name="receive_title">接收</string>
-
     <string name="details_alert_message">將會顯示敏感資訊。\n請注意周遭安全!</string>
     <string name="details_alert_yes">我現在很安全</string>
     <string name="details_alert_no">不看了!</string>
@@ -246,4 +246,12 @@
     <string name="fab_restore_viewonly">回復唯讀錢包</string>
     <string name="fab_restore_key">從私鑰回復錢包</string>
     <string name="fab_restore_seed">從25字種子碼回復錢包</string>
+
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
+
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 </resources>
