--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -320,4 +320,7 @@
     <string name="send_sweepall">Отправить все средства на этот счет!</string>
     <string name="tx_subaddress">Субадрес #%1$d</string>
     <string name="generate_address_label_sub">Публичный субадрес #%1$d</string>
+
+    <string name="menu_language">Language</string>
+    <string name="language_system_default">Use System Language</string>
 </resources>
