--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -315,4 +315,7 @@
     <string name="send_sweepall">发送这个户口的所有已确认款项！</string>
     <string name="tx_subaddress">附属地址 #%1$d</string>
     <string name="generate_address_label_sub">附属公开地址 #%1$d</string>
+
+    <string name="menu_language">语言</string>
+    <string name="language_system_default">使用系统默认语言</string>
 </resources>
