Fix "restore from seeds" too long on certain devices. + change "restore from key" for consistency.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -310,8 +310,8 @@
 
     <string name="fab_create_new">Créer un nouveau portefeuille</string>
     <string name="fab_restore_viewonly">Restaurer un portefeuille d\'audit</string>
-    <string name="fab_restore_key">Restaurer un portefeuille depuis la clef privée</string>
-    <string name="fab_restore_seed">Restaurer un portefeuille depuis la phrase mnémonique</string>
+    <string name="fab_restore_key">Restaurer depuis la clef privée</string>
+    <string name="fab_restore_seed">Restaurer depuis la phrase mnémonique</string>
 
     <string name="accounts_drawer_new">Créer un Compte</string>
     <string name="accounts_drawer_title">Comptes</string>
