Monerujo for Ledger Nano S

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -34,6 +34,7 @@
 
     <string name="info_xmrto_enabled">BTC fizetés engedélyezve, koppints ide a részletekért.</string>
     <string name="info_crazypass_enabled">CrAzYpass engedélyezve, koppints ide a részletekért</string>
+    <string name="info_ledger_enabled">Ledger engedélyezve, koppints ide a részletekért</string>
 
     <string name="info_xmrto"><![CDATA[
         <b>Bitcoin-címet adtál meg.</b><br/>
@@ -43,7 +44,6 @@
     <string name="info_send_xmrto_success_order_label">XMR.TO megrendelés</string>
 
     <string name="info_send_xmrto_success_btc">%1$s BTC</string>
-
 
     <string name="info_send_xmrto_paid">Megerősítés folyamatban</string>
     <string name="info_send_xmrto_unpaid">Kifizetés folyamatban</string>
@@ -322,4 +322,20 @@
 
     <string name="menu_language">Nyelv</string>
     <string name="language_system_default">Rendszernyelv használata</string>
+
+    <string name="fab_restore_ledger">Restore from Ledger Nano S</string>
+
+    <string name="progress_ledger_progress">Communicating with Ledger</string>
+    <string name="progress_ledger_confirm">Confirmation on Ledger required!</string>
+    <string name="progress_ledger_lookahead">Retrieving subaddresses</string>
+    <string name="progress_ledger_verify">Verifying keys</string>
+    <string name="progress_ledger_opentx">Doing crazy maths</string>
+    <string name="progress_ledger_mlsag">Hashing stuff</string>
+    <string name="open_wallet_ledger_missing">Please (re)connect Ledger device</string>
+
+    <string name="accounts_progress_new">Creating account</string>
+    <string name="accounts_progress_update">Updating wallet</string>
+
+    <string name="toast_ledger_attached">%1$s attached</string>
+    <string name="toast_ledger_detached">%1$s detached</string>
 </resources>
