--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -32,6 +32,8 @@
     <string name="info_send_prio_fees">Υψηλότερη προτεραιότητα = Υψηλότερα Κόμιστρα</string>
 
     <string name="info_xmrto_enabled">Συναλλαγή BTC ενεργοποιήθηκε, πάτα για περισσότερες πληροφορείες.</string>
+    <string name="info_crazypass_enabled">CrAzYpass ενεργοποιήθηκε, πάτα για περισσότερες πληροφορείες.</string>
+    <string name="info_ledger_enabled">Ledger ενεργοποιήθηκε, πάτα για περισσότερες πληροφορείες.</string>
 
     <string name="info_xmrto"><![CDATA[
         <b>Έβαλες μια διεύθυνση bitcoin.</b><br/>
@@ -284,7 +286,6 @@
     <string name="fab_restore_seed">Επαναφορά πορτοφολιού από σπόρο 25-λέξεων</string>
 
     <string name="menu_changepw">Change Passphrase</string>
-    <string name="info_crazypass_enabled">CrAzYpass enabled, tap for more info.</string>
     <string name="changepw_progress">Change Password in progress</string>
     <string name="changepw_failed">Change Password failed!</string>
     <string name="changepw_success">Password changed</string>
@@ -320,4 +321,20 @@
 
     <string name="menu_language">Language</string>
     <string name="language_system_default">Use System Language</string>
+
+    <string name="fab_restore_ledger">Restore from Ledger Nano S</string>
+
+    <string name="progress_ledger_progress">Communicating with Ledger</string>
+    <string name="progress_ledger_confirm">Confirmation on Ledger required!</string>
+    <string name="progress_ledger_lookahead">Retrieving subaddresses</string>
+    <string name="progress_ledger_verify">Verifying keys</string>
+    <string name="progress_ledger_opentx">Doing crazy maths</string>
+    <string name="progress_ledger_mlsag">Hashing stuff</string>
+    <string name="open_wallet_ledger_missing">Please (re)connect Ledger device</string>
+
+    <string name="accounts_progress_new">Creating account</string>
+    <string name="accounts_progress_update">Updating wallet</string>
+
+    <string name="toast_ledger_attached">%1$s attached</string>
+    <string name="toast_ledger_detached">%1$s detached</string>
 </resources>
