--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -34,6 +34,7 @@
 
     <string name="info_xmrto_enabled">BTC付款已启用, 点选了解更多</string>
     <string name="info_crazypass_enabled">CrAzYpass已启用, 点选了解更多</string>
+    <string name="info_ledger_enabled">Ledger已启用, 点选了解更多</string>
 
     <string name="info_xmrto"><![CDATA[
         <b>你输入了Bitcoin地址</b><br/>
@@ -318,4 +319,20 @@
 
     <string name="menu_language">语言</string>
     <string name="language_system_default">使用系统语言</string>
+
+    <string name="fab_restore_ledger">Restore from Ledger Nano S</string>
+
+    <string name="progress_ledger_progress">Communicating with Ledger</string>
+    <string name="progress_ledger_confirm">Confirmation on Ledger required!</string>
+    <string name="progress_ledger_lookahead">Retrieving subaddresses</string>
+    <string name="progress_ledger_verify">Verifying keys</string>
+    <string name="progress_ledger_opentx">Doing crazy maths</string>
+    <string name="progress_ledger_mlsag">Hashing stuff</string>
+    <string name="open_wallet_ledger_missing">Please (re)connect Ledger device</string>
+
+    <string name="accounts_progress_new">Creating account</string>
+    <string name="accounts_progress_update">Updating wallet</string>
+
+    <string name="toast_ledger_attached">%1$s attached</string>
+    <string name="toast_ledger_detached">%1$s detached</string>
 </resources>
