--- a/app/src/main/res/values-gr/strings.xml
+++ b/app/src/main/res/values-gr/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="wallet_activity_name">Πορτοφόλι</string>
 
-    <string name="menu_testnet">Δίκτυο δοκιμών(Testnet)</string>
     <string name="menu_about">Σχετικά</string>
     <string name="menu_privacy">Πολιτική Απορρήτου</string>
 
@@ -41,16 +40,7 @@
 
     <string name="info_send_xmrto_success_order_label">Εντολή XMR.TO</string>
 
-    <string name="info_send_xmrto_success_sending">Σε αποστολή</string>
-    <string name="info_send_xmrto_success_status_label">Κατάσταση:</string>
     <string name="info_send_xmrto_success_btc">%1$s BTC</string>
-    <string name="info_send_xmrto_success_status">%1$s is %1$s (#%1$d)</string>
-
-    <string name="info_txdetails_xmrto_key">Κλειδί:</string>
-    <string name="info_txdetails_xmrto_address">Διεύθυνση:</string>
-    <string name="info_txdetails_xmrto_status">Κατάσταση:</string>
-    <string name="info_txdetails_xmrto_amount">%1$s BTC</string>
-
 
     <string name="info_send_xmrto_paid">Επιβεβαίωση Εκκρεμεί</string>
     <string name="info_send_xmrto_unpaid">Πληρωμή σε εκκρεμότητα</string>
@@ -89,16 +79,11 @@
 
     <string name="label_send_settings_advanced">Για προχωρημένους:</string>
 
-    <string name="label_send_btc_details">Πάτησε για περισσότερες λεπτομέρειες</string>
     <string name="label_send_btc_xmrto_info">Επίσκεψη στο xmr.to για υποστήριξη &amp; με εντοπισμό συναλλαγής</string>
-    <string name="label_send_txinfo">Δες τις λεπτομέρειες της συναλλαγής(TX details) για περισσότερες λεπτομέρειες</string>
     <string name="label_send_btc_xmrto_key_lb">Μυστικό Κλειδί\nXMR.TO</string>
     <string name="label_send_btc_xmrto_key">XMR.TO Μυστικό Κλειδί</string>
     <string name="label_send_btc_address">BTC Διεύθυνση Παραλήπτη</string>
     <string name="label_send_btc_amount">Ποσό</string>
-    <string name="label_send_btc_create_order">Δημιουργία εντολής με XMR.TO</string>
-
-    <string name="label_send_btc_retry">Πάτησε για να προσπαθήσεις ξανά</string>
 
     <string name="label_send_txid">ID Συναλλαγής</string>
     <string name="label_send_address">Διεύθυνση Παραλήπτη</string>
@@ -112,22 +97,13 @@
 
     <string name="service_progress">Μάζεμα των πραγμάτων &#8230;\nΑυτό μπορεί να διαρκέσει λίγο!</string>
 
-    <string name="backup_success">Η δημιουργία αντίγραφου ασφαλείας ήταν επιτυχής</string>
     <string name="backup_failed">Η δημιουργία αντίγραφου ασφαλείας απέτυχε!</string>
-    <string name="archive_success">Η αρχειοθέτηση ήταν επιτυχής</string>
     <string name="archive_failed">Η αρχειοθέτηση απέτυχε!</string>
-    <string name="delete_failed">Η διαγραφή απέτυχε!</string>
     <string name="rename_failed">Η μετονομασία απέτυχε!</string>
 
     <string name="label_daemon">Κόμβος(Δαίμονας)</string>
     <string name="prompt_daemon">([&lt;χρήστης&gt;:&lt;κωδικός&gt;@]&lt;δαίμονας&gt;[:&lt;πόρτα&gt;])</string>
-    <string name="prompt_mainnet">Επιλογή δικτύου</string>
-    <string name="connect_stagenet">StageNet</string>
-    <string name="connect_testnet">Δίκτυο δοκιμών(TestNet)</string>
-    <string name="connect_mainnet">Βασικό δίκτυο(MainNet)</string>
-    <string name="status_walletlist_loading">Φόρτωση Λίστας Πορτοφολιών</string>
     <string name="status_wallet_loading">Φόρτωση Πορτοφολιού &#8230;</string>
-    <string name="status_wallet_unloading">Αποθήκευση Πορτοφολιού</string>
     <string name="status_wallet_unloaded">Πορτοφόλι αποθηκεύτηκε</string>
     <string name="status_wallet_unload_failed">Η αποθήκευση του πορτοφολιού απέτυχε!</string>
     <string name="status_wallet_connecting">Σύνδεση &#8230;</string>
@@ -136,12 +112,9 @@
     <string name="status_wallet_node_invalid">Ο κόμβος είναι μη έγκυρος!\nΠροσπάθησε με άλλον.</string>
     <string name="status_wallet_connect_ioex">Δεν είναι δυνατή η πρόσβαση στον κόμβο!\nΠροσπάθησε πάλι ή με άλλον.</string>
 
-    <string name="status_working">Επεξεργασία &#8230;</string>
     <string name="status_wallet_disconnected">Αποσυνδέθηκε</string>
 
-    <string name="status_transaction_sent">Συναλλαγή στάλθηκε!</string>
     <string name="status_transaction_failed">Η συναλλαγή απέτυχε: %1$s</string>
-    <string name="status_transaction_prepare_failed">Δεν ήταν δυνατή η δημιουργία συναλλαγής!</string>
 
     <string name="send_xmrto_timeout">Περίμενες για πολύ καιρό φίλε μου!</string>
 
@@ -153,35 +126,22 @@
     <string name="prompt_send_password">Επιβεβαίωση κωδικού</string>
     <string name="bad_password">Λάθος κωδικός!</string>
     <string name="bad_wallet">Το πορτοφόλι δεν υπάρχει!</string>
-    <string name="error_not_wallet">Αυτό δεν είναι πορτοφόλι!</string>
     <string name="prompt_daemon_missing">Η διεύθυνση δαίμονα πρέπει να οριστεί!</string>
     <string name="prompt_wrong_net">Το πορτοφόλι δεν ταιριάζει με το επιλεγμένο δίκτυο</string>
-    <string name="warn_daemon_unavailable">Δεν είναι δυνατή η σύνδεση με το δαίμονα! Προσπάθησε ξανά.</string>
-    <string name="panic">Κάτι πάει λάθος!</string>
 
     <string name="label_watchonly">(Μόνο Παρακολούθηση)</string>
 
     <string name="label_wallet_receive">Λήψη</string>
     <string name="label_wallet_send">Αποστολή</string>
 
-    <string name="title_amount">Ποσό</string>
-    <string name="title_date">Ημερομηνία</string>
     <string name="xmr_unconfirmed_amount">+ %1$s XMR μη επιβεβαιωμένα</string>
-    <string name="label_transactions">Συναλλαγές</string>
-    <string name="text_daemonConnected">Ο δαίμονας συνδέθηκε!</string>
 
     <string name="service_description">Υπηρεσία monerujo</string>
-    <string name="local_service_started">Η Υπηρεσία monerujo τρέχει</string>
-    <string name="local_service_stopped">Υπηρεσία monerujo σταμάτησε</string>
-    <string name="local_service_label">Υπηρεσία monerujo</string>
-    <string name="local_service_connected">Η υπηρεσία monerujo συνδέθηκε</string>
-    <string name="local_service_disconnected">Η υπηρεσία monerujo αποσυνδέθηκε</string>
 
     <string name="status_synced">Συγχρονισμένα:</string>
     <string name="status_remaining">Μπλοκς που απομένουν</string>
     <string name="status_syncing">Έρευνα:</string>
 
-    <string name="prompt_problems">Προβλήματα</string>
     <string name="message_strorage_not_writable">Η εξωτερική αποθήκευση δεν είναι εγγράψιμη! Πανικός!</string>
     <string name="message_strorage_not_permitted">Χρειαζόμαστε πραγματικά αυτά τα δικαιώματα εξωτερικής αποθήκευσης!</string>
     <string name="message_camera_not_permitted">Όχι κάμερα = Όχι QR σκανάρισμα!</string>
@@ -193,8 +153,6 @@
     <string name="message_copy_xmrtokey">Το Κλειδή XMR.TO αντιγράφηκε στο πρόχειρο!</string>
     <string name="message_copy_address">Η διύθυνση πορτοφολιού αντιγράφηκε στο πρόχειρο!</string>
     <string name="message_copy_txid">Το ID συναλλαγής αντιγράφηκε στο πρόχειρο!</string>
-    <string name="message_noselect_seed">Η επιλογή του σπόρου(seed) είναι απενεργοποιημένη για λόγους ασφαλείας!</string>
-    <string name="message_noselect_key">Η επιλογή του κλειδιού ξοδεύματος(spend key) είναι απενεργοποιημένη για λόγους ασφαλείας!</string>
     <string name="message_nocopy">Η αντιγραφή είναι απενεργοποιημένη για λόγους ασφαλείας!</string>
 
     <string name="message_exchange_failed">Δεν είναι δυνατή η συναλλαγματική ισοτιμία! Χρησιμοποίησε XMR/XMR ή προσπάθησε ξανά</string>
@@ -203,12 +161,7 @@
     <string name="generate_name_hint">Όνομα Πορτοφολιού</string>
     <string name="generate_password_hint">Κωδικός Πορτοφολιού</string>
     <string name="generate_buttonGenerate">Φτιάξε μου ένα πορτοφόλι επιτέλους!</string>
-    <string name="generate_seed">Μνημονικός σπόρος(Mnemonic Seed)</string>
     <string name="generate_button_accept">Έχω σημειώσει αυτές τις 25 λέξεις!</string>
-
-    <string name="generate_button_backup">Δημιουργία αντιγράφου ασφαλείας</string>
-    <string name="generate_button_export">Εξαγωγή Κλειδιών</string>
-    <string name="generate_button_delete">ΔΙΑΓΡΑΦΗ</string>
 
     <string name="generate_wallet_name">Δώσε μου ένα όνομα!</string>
     <string name="generate_wallet_exists">Το Πορτοφόλι υπάρχει!</string>
@@ -230,13 +183,10 @@
     <string name="generate_mnemonic_hint">Μνημονικός Σπόρος(Mnemonic Seed) 25-Λέξεων</string>
     <string name="generate_restoreheight_hint">Ύψος ανάκτησης ή Ημερομηνία (YYYY-MM-DD δλδ χρονιά-μήνας-μέρα)</string>
 
-    <string name="generate_wallet_label">Πορτοφόλι</string>
-    <string name="generate_password_label">Κωδικός</string>
     <string name="generate_address_label">Δημόσια Διεύθυνση(Public Address)</string>
     <string name="generate_viewkey_label">Κλειδί προβολής(View Key)</string>
     <string name="generate_spendkey_label">Κλειδί ξοδεύματος(Spend Key)</string>
     <string name="generate_mnemonic_label">Μνημονικός Σπόρος(Mnemonic Seed)</string>
-    <string name="generate_restoreheight_label">Ύψος ανάκτησης:</string>
 
     <string name="generate_check_key">Δώστε έγκυρο κλειδί</string>
     <string name="generate_check_address">Δώστε έγκυρη διεύθυνση</string>
@@ -248,20 +198,13 @@
     <string name="send_paymentid_hint">ID Πληρωμής(Payment ID)(προαιρετικό)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Προσωπικές σημειώσεις (προαιρετικό)</string>
-    <string name="send_priority_hint">Προτεραιότητα συναλλαγής</string>
-    <string name="send_mixin_hint">Mixin</string>
-    <string name="send_sweep_hint">Sweep</string>
     <string name="send_generate_paymentid_hint">Δημιουργία</string>
     <string name="send_qr_hint">Σάρωση</string>
-    <string name="send_prepare_hint">Προετοιμασία</string>
-    <string name="send_dispose_hint">Dispose (Undo)</string>
     <string name="send_send_label">Ξόδεψε τα γλυκά μου Moneroj</string>
     <string name="send_send_timed_label">Ξόδεψε τα γλυκά μου Moneroj (%1$s)</string>
-    <string name="send_really_send_hint">Τελευταίο βήμα - Επιβεβαίωση!</string>
     <string name="send_qr_invalid">Δεν είναι QR κώδικας</string>
     <string name="send_qr_address_invalid">Δεν είναι έγκυρος κωδικός QR πληρωμής</string>
     <string name="send_address_invalid">Δεν είναι έγκυρη η διεύθυνση</string>
-    <string name="send_preparing_progress">Προετοιμασία συναλλαγής</string>
     <string name="send_title">Αποστολή</string>
     <string name="send_available">Υπόλοιπο: %1$s XMR</string>
     <string name="send_address_title">Διεύθυνση</string>
@@ -269,13 +212,10 @@
     <string name="send_settings_title">Ρυθμίσεις</string>
     <string name="send_confirm_title">Επιβεβαίωση</string>
     <string name="send_success_title">Έγινε</string>
-    <string name="send_summary_heading">Σύνοψη</string>
-    <string name="send_amount_too_large">Ποσό > Κεφαλαίων</string>
 
     <string name="send_amount_label">Ποσό</string>
     <string name="send_fee_btc_label">Κόμιστρο (XMR)</string>
     <string name="send_fee_label">Κόμιστρο</string>
-    <string name="send_dust_label">Σκόνη</string>
     <string name="send_total_btc_label">Σύνολο (XMR)</string>
     <string name="send_total_label">Σύνολο</string>
 
@@ -284,18 +224,14 @@
 
     <string name="send_create_tx_error_title">Σφάλμα Δημιουργίας Συναλλαγής</string>
 
-    <string name="tx_list_fee_pending">συμπεριλαμβανομένου %1$s κόμιστρο</string>
     <string name="tx_list_fee">- Κόμιστρο %1$s</string>
     <string name="tx_list_amount_failed">(%1$s)</string>
     <string name="tx_list_failed_text">απέτυχε</string>
     <string name="tx_list_amount_negative">- %1$s</string>
     <string name="tx_list_amount_positive">+ %1$s</string>
 
-    <string name="tx_status_btc">Κατάσταση</string>
-    <string name="tx_address">Διεύθυνση</string>
     <string name="tx_timestamp">Ημερομηνία</string>
     <string name="tx_id">ID Συναλλαγής(TX ID)</string>
-    <string name="tx_id_btc">ID Συναλλαγής(TX ID)\n(BTC)</string>
     <string name="tx_key">Κλειδί συναλλαγής(TX Key)</string>
     <string name="tx_destination">Προορισμός</string>
     <string name="tx_destination_btc">Προορισμός\n(BTC)</string>
@@ -306,30 +242,20 @@
     <string name="tx_fee">Κόμιστρο</string>
     <string name="tx_transfers">Συναλλαγές</string>
     <string name="tx_notes">Σημειώσεις</string>
-    <string name="tx_button_copy">Αντιγραφή στο πρόχειρο</string>
-    <string name="tx_copy_message">Αντιγράφηκε στο Πρόχειρο</string>
-    <string name="tx_copy_label">Λεπτομέρειες Συναλλαγής</string>
     <string name="tx_notes_hint">(προαιρετικό)</string>
     <string name="tx_button_notes">Αποθήκευση</string>
-    <string name="tx_notes_set">Οι σημειώσεις αποθηκεύτηκαν</string>
     <string name="tx_notes_set_failed">Η αποθήκευση των σημειώσεων απέτυχε</string>
     <string name="tx_title">Λεπτομέρειες Συναλλαγής</string>
 
     <string name="tx_pending">ΕΚΚΡΕΜΗ</string>
     <string name="tx_failed">ΑΠΕΤΥΧΕ</string>
 
-    <string name="receive_generate_hint">Δείξε μου τον Κώδικα QR</string>
-    <string name="receive_paymentid_button">Δημιουργία</string>
     <string name="receive_paymentid_hint">ID Πληρωμής(Payment ID) (προαιρετικό)</string>
     <string name="receive_amount_hint">Ποσό</string>
-    <string name="receive_amount_xmr_hint">XMR</string>
     <string name="receive_cannot_open">Δεν ήταν δυνατό το άνοιγμα του πορτοφολιού!</string>
     <string name="receive_paymentid_invalid">16 ή 64 χαρακτήρες Hex (0&#8211;9,a&#8211;f)</string>
     <string name="receive_integrated_paymentid_invalid">Πρέπει να είναι άδειο με ενσωματωμένη διεύθυνση</string>
-    <string name="receive_bitcoin_paymentid_invalid">Πρέπει να είναι άδειο με διεύθυνση bitcoin</string>
-    <string name="receive_amount_invalid">Πρέπει να είναι > 0</string>
 
-    <string name="receive_amount_empty">Εισαγάγετε τιμή</string>
     <string name="receive_amount_too_big">Μέγιστο %1$s</string>
     <string name="receive_amount_negative">Ελάχιστο 0</string>
     <string name="receive_amount_nan">XMR δεν υπάρχει αριθμός</string>
@@ -356,4 +282,39 @@
     <string name="fab_restore_viewonly">Επαναφορά πορτοφολιού προβολής-μόνο</string>
     <string name="fab_restore_key">Επαναφορά πορτοφολιού από ιδιωτικά κλειδιά</string>
     <string name="fab_restore_seed">Επαναφορά πορτοφολιού από σπόρο 25-λέξεων</string>
+
+    <string name="menu_changepw">Change Passphrase</string>
+    <string name="info_crazypass_enabled">CrAzYpass enabled, tap for more info.</string>
+    <string name="changepw_progress">Change Password in progress</string>
+    <string name="changepw_failed">Change Password failed!</string>
+    <string name="changepw_success">Password changed</string>
+    <string name="prompt_changepw">New Passphrase for %1$s</string>
+    <string name="prompt_changepwB">Repeat Passphrase for %1$s</string>
+    <string name="prompt_fingerprint_auth">You can also open wallet using fingerprint.\nPlease touch sensor.</string>
+    <string name="prompt_open_wallet">Opening the wallet&#8230;</string>
+    <string name="bad_fingerprint">Fingerprint not recognized. Try again.</string>
+    <string name="bad_saved_password">Saved password is incorrect.\nPlease enter password manually.</string>
+    <string name="generate_fingerprint_hint">Allow to open wallet using fingerprint</string>
+    <string name="generate_fingerprint_warn">
+        <strong>Fingerprint Authentication</strong>
+        <p>With fingerprint authentication enabled, you can view wallet balance and receive funds
+        without entering password.</p>
+        <p>But for additional security, monerujo will still require you to enter password when
+        viewing wallet details or sending funds.</p>
+        <strong>Security Warning</strong>
+        <p>Finally, monerujo wants to remind you that anyone who can get your fingerprint will be
+        able to peep into your wallet balance.</p>
+        <p>For instance, a malicious user around you can open your wallet when you are asleep.</p>
+        <strong>Are you sure to enable this function?</strong>
+    </string>
+    <string name="generate_bad_passwordB">Passphrases do not match</string>
+    <string name="generate_empty_passwordB">Passphrase may not be empty</string>
+    <string name="generate_crazypass_label">Wallet Files Restore Password</string>
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_drawer_title">Accounts</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 </resources>
